# rust-simple-neural-network

./: 98_result.txt  Cargo.toml  readme.MD
data/: checkout_data.csv  example.txt  login_data.csv
model/: banknote.json  banknote_deep.json  checkout_bot.json  xor.json
src/: lib.rs  main.rs  utils.rs
src/algorithm/: mod.rs  ndarray_helper.rs  nn_layer.rs  three_layer.rs
src/deep_learning/: activation.rs  costs.rs  dense_layer.rs  mod.rs  neural_net.rs  nnet.rs  optimizer.rs  parameters.rs  tensor2d.rs  types.rs
src/deep_learning/deprecated/: ndarray_helper.rs  nn.rs
src/examples/: banknote.rs  checkout_bot_detector.rs  login_bot_detector.rs  mnist.rs  mod.rs  xor.rs
src/rust_learn/: activation.rs  costs.rs  dense_layer.rs  dropout_layer.rs  mod.rs  neural_net.rs  optimizer.rs  parameters.rs  tensor2d.rs  types.rs
tests/: xor.rs
