[package]
name = "rust_deep_learning"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = { version = "0.15.6", features = ["serde"] }
ndarray-rand = "0.14.0"
ndarray-stats = "0.5.1"
rand = "0.8"
rand_isaac = "0.3.0"
rand_distr="0.4"
rustc-serialize = { version = "0.3.20", optional = true }
serde_json = "1.0"
itertools = "0.10.3"
serde = { version= "1.0.144", features = ["derive"] }
colored = "2.0.0"
mnist_read = "1.0.1"



